[gd_scene load_steps=6 format=3 uid="uid://b5fc6ci2ler17"]

[ext_resource type="Script" path="res://ui/settings_menu.gd" id="1_uxpni"]
[ext_resource type="Resource" uid="uid://t78c28dqsemr" path="res://game_stats.tres" id="2_cnkli"]
[ext_resource type="PackedScene" uid="uid://sdydv6n8gl2j" path="res://effects/space_background.tscn" id="3_umoe8"]
[ext_resource type="Theme" uid="uid://b52id50jxytwb" path="res://ui/default_theme.tres" id="4_dv5rv"]
[ext_resource type="PackedScene" uid="uid://cdryh6ji63wc" path="res://ui/difficulty_option_button.tscn" id="5_8yfj2"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uxpni")
game_stats = ExtResource("2_cnkli")

[node name="SpaceBackground" parent="." instance=ExtResource("3_umoe8")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 140

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SettingsTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_dv5rv")
theme_type_variation = &"HeaderLarge"
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 2.08165e-12)
layout_mode = 2
theme = ExtResource("4_dv5rv")
theme_type_variation = &"HeaderMedium"
text = "Difficulty"

[node name="DifficultyOptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_8yfj2")]
unique_name_in_owner = true
layout_mode = 2

[node name="ShipSpeed" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ShipSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/ShipSpeed"]
custom_minimum_size = Vector2(160, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("4_dv5rv")
theme_type_variation = &"HeaderMedium"
text = "Ship speed"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ShipSpeed"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ShipSpeedSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ShipSpeed/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 32)
layout_mode = 2
theme = ExtResource("4_dv5rv")
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ShipSpeed/VBoxContainer"]
layout_mode = 2

[node name="ShipSpeedLabelSlow" type="Label" parent="MarginContainer/VBoxContainer/ShipSpeed/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_dv5rv")
text = "Slow"

[node name="ShipSpeedValueLabel" type="Label" parent="MarginContainer/VBoxContainer/ShipSpeed/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_dv5rv")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "100"
horizontal_alignment = 1

[node name="ShipSpeedLabelFast" type="Label" parent="MarginContainer/VBoxContainer/ShipSpeed/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_dv5rv")
text = "Fast"
horizontal_alignment = 2

[node name="Cheating" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CheatingTitle" type="Label" parent="MarginContainer/VBoxContainer/Cheating"]
custom_minimum_size = Vector2(160, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("4_dv5rv")
theme_type_variation = &"HeaderMedium"
text = "CHEATING"

[node name="PowerUpExtravaganza" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Cheating"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PowerUpExtravaganzaCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/Cheating/PowerUpExtravaganza"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_dv5rv")
text = "Power-Up Extravaganza"

[node name="PowerUpExtravaganzaMessage" type="Label" parent="MarginContainer/VBoxContainer/Cheating/PowerUpExtravaganza"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
theme = ExtResource("4_dv5rv")
theme_type_variation = &"TooltipLabel"
text = "Enable this to turn your ship into the ultimate powerhouse! It's not cheating; it's just making things a bit more... explosive."
autowrap_mode = 2

[node name="DoneButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme = ExtResource("4_dv5rv")
theme_type_variation = &"BigButton"
text = "Done"
